--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
             <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
                 Exam
                 Results.</h2>
+            <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
+                Exam
+                Results.</h2>
             <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
                 common
                 entrance exam conducted for admission.</p>
