--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
             <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
                 common
                 entrance exam conducted for admission.</p>
+            <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
+                </p>
 
             <div class="table-responsive" style="text-align: center;">
                 <table id="example" class="table table-striped table-bordered nowrap" style="width:100%">
