--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.1/css/responsive.bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="images/TMA_CircledLogo_NoBG.png" type="image/x-icon">
-    <title>Navbar Example</title>
+    <title>TMA CE-EXAMs 2023/2024</title>
     <style>
         /* Custom CSS for navbar */
         body {
@@ -132,22 +132,17 @@
         </div>
     </nav>
 
+    <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
+                Exam
+                Results.</h2>
+    <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
+                common
+                entrance exam conducted for admission.</p>
+
 
 
     <div class="container">
         <div class="row">
-
-            <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
-                Exam
-                Results.</h2>
-            <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
-                Exam
-                Results.</h2>
-            <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
-                common
-                entrance exam conducted for admission.</p>
-            <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
-                </p>
 
             <div class="table-responsive" style="text-align: center;">
                 <table id="example" class="table table-striped table-bordered nowrap" style="width:100%">
