--- a/index.html
+++ b/index.html
@@ -60,22 +60,6 @@
             vertical-align: middle;
         }
 
-        /* .footer {
-      background-color: #333;
-      border-color: #222;
-      height: 80px;
-      border-radius: 0%;
-      color: #fff;
-      text-align: center;
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    } */
-
         .footer {
             background-color: #333;
             border-color: #222;
@@ -434,12 +418,12 @@
     <div class="col-lg-2 col-md-2 col-sm-2"></div> <!-- Empty column to create space -->
     </div>
     </div>
-
+<!-- 
     <footer class="footer">
         <p> <i class="material-icons footer-icon">language</i>2023 TINKER MONTESSORI ACADEMY, All rights reserved. |<i
                 class="material-icons footer-icon">location_on</i>Lere Street, U/Dosa, Kaduna, Nigeria. |<i
                 class="material-icons footer-icon">phone</i>0803 368 3857</p>
-    </footer>
+    </footer> -->
 
     <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
