--- a/index.html
+++ b/index.html
@@ -116,13 +116,7 @@
         </div>
     </nav>
 
-    <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
-                Exam
-                Results.</h2>
-    <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
-                common
-                entrance exam conducted for admission.</p>
-
+    
 
 
     <div class="container">
@@ -130,6 +124,15 @@
 
             <div class="table-responsive" style="text-align: center;">
                 <table id="example" class="table table-striped table-bordered nowrap" style="width:100%">
+                    <caption>
+                        <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
+                Exam
+                Results.</h2>
+    <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
+                common
+                entrance exam conducted for admission.</p>
+
+                    </caption>
                     <thead class="tab_h">
                         <tr>
                             <th>S.No.:</th>
