--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@
 
     <div class="container">
         <div class="row">
-
-            <div class="table-responsive" style="text-align: center;">
-                <table id="example" class="table table-striped table-bordered nowrap" style="width:100%">
-                    <caption>
-                        <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
+            <div>
+                <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
                 Exam
                 Results.</h2>
     <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
                 common
                 entrance exam conducted for admission.</p>
 
-                    </caption>
+            </div>
+
+            <div class="table-responsive" style="text-align: center;">
+                <table id="example" class="table table-striped table-bordered nowrap" style="width:100%">
                     <thead class="tab_h">
                         <tr>
                             <th>S.No.:</th>
@@ -421,12 +421,12 @@
     <div class="col-lg-2 col-md-2 col-sm-2"></div> <!-- Empty column to create space -->
     </div>
     </div>
-<!-- 
+
     <footer class="footer">
         <p> <i class="material-icons footer-icon">language</i>2023 TINKER MONTESSORI ACADEMY, All rights reserved. |<i
                 class="material-icons footer-icon">location_on</i>Lere Street, U/Dosa, Kaduna, Nigeria. |<i
                 class="material-icons footer-icon">phone</i>0803 368 3857</p>
-    </footer> -->
+    </footer>
 
     <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
