--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background-color: #f2f2f2;
             color: #333;
             line-height: 1.5;
-            /* padding: 20px; */
+            padding: 20px;
         }
 
         .navbar-default {
@@ -116,12 +116,11 @@
         </div>
     </nav>
 
-    
+    div>
+    <pre>
 
-
-    <div class="container">
-        <div class="row">
-            <div>
+        
+    </pre>
                 <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
                 Exam
                 Results.</h2>
@@ -130,6 +129,11 @@
                 entrance exam conducted for admission.</p>
 
             </div>
+
+
+    <div class="container">
+        <div class="row">
+            <
 
             <div class="table-responsive" style="text-align: center;">
                 <table id="example" class="table table-striped table-bordered nowrap" style="width:100%">
