--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         .footer {
             background-color: #333;
             border-color: #222;
-            height: 80px;
+            height: 10%;
             border-radius: 0%;
             color: #fff;
             text-align: center;
@@ -116,7 +116,7 @@
         </div>
     </nav>
 
-    div>
+    <div>
     <pre>
 
         
@@ -133,7 +133,7 @@
 
     <div class="container">
         <div class="row">
-            <
+            
 
             <div class="table-responsive" style="text-align: center;">
                 <table id="example" class="table table-striped table-bordered nowrap" style="width:100%">
