--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.1/css/responsive.bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="images/TMA_CircledLogo_NoBG.png" type="image/x-icon">
-    <title>TMA CE-EXAMs 2023/2024</title>
+    <title>Navbar Example</title>
     <style>
         /* Custom CSS for navbar */
         body {
@@ -18,7 +18,7 @@
             background-color: #f2f2f2;
             color: #333;
             line-height: 1.5;
-
+            padding-bottom: 8%;
         }
 
         .navbar-default {
@@ -63,7 +63,7 @@
         .footer {
             background-color: #333;
             border-color: #222;
-            height: 10%;
+            height: 8%;
             border-radius: 0%;
             color: #fff;
             text-align: center;
@@ -74,6 +74,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            z-index: 9999; /* Ensures the footer is on top of other content */
         }
 
         .footer-icon {
@@ -83,10 +84,10 @@
         }
 
         .footer-text {
-            /* display: flex; */
-            align-items: center;
-            font-size: 10px;
-            vertical-align: middle;
+            display: flex;
+        align-items: center;
+        font-size: 10px;
+        vertical-align: middle;
         }
 
         tr:nth-child(even) {
@@ -116,21 +117,21 @@
         </div>
     </nav>
 
-    <pre>
+            <pre>
 
-        
-    </pre>
-                <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
+
+            </pre>
+            <h2 class="text-center" style="font-size: 22px; font-weight: bold; color: #333;">2023/2024 Common Entrance
                 Exam
                 Results.</h2>
-    <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
+            <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
                 common
                 entrance exam conducted for admission.</p>
 
 
-
     <div class="container">
         <div class="row">
+
             <div class="table-responsive" style="text-align: center;">
                 <table id="example" class="table table-striped table-bordered nowrap" style="width:100%">
                     <thead class="tab_h">
