--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background-color: #f2f2f2;
             color: #333;
             line-height: 1.5;
-            padding-bottom: 8%;
+            padding-bottom: 20px;
         }
 
         .navbar-default {
