--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background-color: #f2f2f2;
             color: #333;
             line-height: 1.5;
-            padding-bottom: 20px;
+            padding-bottom: 10%;
         }
 
         .navbar-default {
@@ -31,7 +31,7 @@
         .navbar-default .navbar-brand {
             color: #fff;
             font-weight: bold;
-            font-size: 20px;
+            font-size: 18px;
             text-transform: uppercase;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
             padding-top: 15px;
