--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 Results.</h2>
             <p class="lead text-center" style="font-size: 15px; color: #666;">Below are the results of the 2023/2024
                 common
-                entrance exam conducted for admission.</p>
+                entrance exam conducted for admission. Also Click the + to expand.</p>
 
 
     <div class="container">
