--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.1/css/responsive.bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="images/TMA_CircledLogo_NoBG.png" type="image/x-icon">
-    <title>Navbar Example</title>
+    <title>TMA CE-Exams_2023/2024</title>
     <style>
         /* Custom CSS for navbar */
         body {
