--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <td>28</td>
                             <td>34</td>
                             <td>80</td>
-                            <td class="fail">FAILED</td>
+                            <td class="fail">PASSED</td>
                         </tr>
                         <tr>
                             <td>3</td>
@@ -221,7 +221,7 @@
                             <td>30</td>
                             <td>32</td>
                             <td>81</td>
-                            <td class="fail">FAILED</td>
+                            <td class="fail">PASSED</td>
                         </tr>
                         <tr>
                             <td>7</td>
@@ -329,7 +329,7 @@
                             <td>33</td>
                             <td>36</td>
                             <td>85</td>
-                            <td class="fail">FAILED</td>
+                            <td class="fail">PASSED</td>
                         </tr>
                         <tr>
                             <td>16</td>
@@ -341,7 +341,7 @@
                             <td>34</td>
                             <td>32</td>
                             <td>89</td>
-                            <td class="fail">FAILED</td>
+                            <td class="fail">PASSED</td>
                         </tr>
                         <tr>
                             <td>17</td>
@@ -353,7 +353,7 @@
                             <td>28</td>
                             <td>37</td>
                             <td>82</td>
-                            <td class="fail">FAILED</td>
+                            <td class="fail">PASSED</td>
                         </tr>
                         <tr>
                             <td>18</td>
@@ -401,7 +401,7 @@
                             <td>29</td>
                             <td>38</td>
                             <td>84</td>
-                            <td class="fail">FAILED</td>
+                            <td class="fail">PASSED</td>
                         </tr>
                         <tr>
                             <td>22</td>
