--- a/index.html
+++ b/index.html
@@ -415,6 +415,30 @@
                             <td>70</td>
                             <td class="fail">FAILED</td>
                         </tr>
+                        <tr>
+                            <td>23</td>
+                            <td>Abubakar</td>
+                            <td>Hafsat Aliyu</td>
+                            <td>JSS 1</td>
+                            <td>10</td>
+                            <td>20</td>
+                            <td>36</td>
+                            <td>34</td>
+                            <td>90</td>
+                            <td class="pass">PASSED</td>
+                        </tr>
+                        <tr>
+                            <td>24</td>
+                            <td>Aminu</td>
+                            <td>Zainab Jibril</td>
+                            <td>JSS 1</td>
+                            <td>11</td>
+                            <td>7</td>
+                            <td>18</td>
+                            <td>25</td>
+                            <td>50</td>
+                            <td class="fail">FAILED</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
