--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     ["24", "Aminu", "Zainab Jibril", "JSS 1", "11", "7", "18", "25", "FAILED"]
                 ],
                 table2: [
-                    
+                    ["2", "Abdulkareem", "Aliyu", "JSS 1", "11", "18", "28", "34", "PASSED"],
                     // Add more rows for Table 2
                 ]
                 // Add more tables as needed
