--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
             <div class="text-center">
                 <select id="tableSelector" class="form-control" style="max-width: 300px; margin: 0 auto;">
                     <option value="table1">2023/24 Session</option>
-                    <option value="table2">2024/25 Session</option>
-                    <!-- Add more options as needed -->
+                    <option value="table2" selected>2024/25 Session</option>
                 </select>
             </div>
             <div class="table-responsive" style="text-align: center; margin-top: 20px;">
@@ -144,7 +143,7 @@
                     <thead class="tab_h">
                         <tr>
                             <th>S.No.:</th>
-                            <th>Last Name:</th>
+                            <th>Surname:</th>
                             <th>Other Name(s):</th>
                             <th>Class:</th>
                             <th>Age:</th>
@@ -211,15 +210,31 @@
                     ["24", "Aminu", "Zainab Jibril", "JSS 1", "11", "7", "18", "25", "FAILED"]
                 ],
                 table2: [
-                    ["2", "Abdulkareem", "Aliyu", "JSS 1", "11", "18", "28", "34", "PASSED"]
-                    // Add more rows for Table 2
+                      ["1", "Aminu", "Fadila", "JSS 1", "11", "30", "33", "45", "0", "PASSED"],
+                      ["2", "Mustapha", "Amatullah Sali", "JSS 1", "12", "36", "36", "52", "0", "PASSED"],
+                      ["3", "Hassan", "Usman", "JSS 1", "11", "24", "20", "36", "0", "PASSED"],
+                      ["4", "Kabir", "Mus’ab A.", "JSS 1", "12", "19", "15", "33", "0", "PASSED"],
+                      ["5", "Haruna", "Rukayya I.", "JSS 1", "10", "18", "18", "23", "0", "PASSED"],
+                      ["6", "Ibrahim", "Idris Idris", "JSS 1", "12", "09", "14", "18", "0", "PASSED"],
+                      ["7", "Isma’il", "Rukayya", "JSS 1", "11", "29", "27", "42", "0", "PASSED"],
+                      ["8", "Al-Hassan", "Fatima Zarah", "JSS 1", "11", "30", "25", "35", "0", "PASSED"],
+                      ["9", "Aliyu", "Zainab Abubakar", "JSS 1", "11", "21", "18", "33", "0", "PASSED"],
+                      ["10", "Uthman", "Halima Sali", "JSS 1", "12", "38", "24", "51", "0", "PASSED"],
+                      ["11", "Shehu", "Maryam Balami", "JSS 1", "", "15", "25", "17", "0", "PASSED"], // Year of birth missing, age not calculated
+                      ["12", "Nuruddeen", "Aslam", "JSS 1", "11", "37", "38", "53", "0", "PASSED"],
+                      ["13", "Usman", "Fatima T.", "JSS 1", "11", "25", "18", "42", "0", "PASSED"],
+                      ["14", "Abubakar", "Amina Mu’azu", "JSS 1", "11", "20", "24", "25", "0", "PASSED"],
+                      ["15", "Surajo", "Sani Sani", "JSS 1", "12", "13", "23", "42", "0", "PASSED"],
+                      ["16", "Abubakar", "Faisal", "JSS 1", "13", "18", "30", "36", "0", "PASSED"],
+                      ["17", "Muhammad", "Adam", "JSS 1", "12", "26", "25", "42", "0", "PASSED"]
                 ]
+
                 // Add more tables as needed
             };
     
             var passMarks = {
                 table1: 80, // Pass mark for table1
-                table2: 75  // Pass mark for table2
+                table2: 80  // Pass mark for table2
                 // Add more pass marks as needed
             };
     
