--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <div class="row">
             <div class="text-center">
                 <select id="tableSelector" class="form-control" style="max-width: 300px; margin: 0 auto;">
+                    <option value="">Select Session</option>
                     <option value="table1">2023/24 Session</option>
                     <option value="table2" selected>2024/25 Session</option>
                 </select>
@@ -148,9 +149,9 @@
                             <th>Class:</th>
                             <th>Age:</th>
                             <th>Maths (50):</th>
-                            <th>English Language (60):</th>
+                            <th>English Language (50):</th>
                             <th>General Knowledge (60):</th>
-                            <th>Total:</th>
+                            <th>Total (160):</th>
                             <th>Status:</th>
                         </tr>
                     </thead>
