--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@
                     ["17", "Muhammad", "Adam", "JSS 1", "12", "26", "25", "42", "0", "PASSED"],
                     ["18", "Muhammad", "Auwal Bello", "JSS 1", "-", "17", "26", "34", "77", "PASSED"],
                     ["19", "Abubakar", "Babaji Haruna", "JSS 1", "-", "25", "20", "31", "76", "PASSED"],
-                    ["20", "Hafsat", "Kassim", "JSS 1", "-", "17", "28", "26", "71", "PASSED"],
+                    ["20", "Kassim", "Hafsat", "JSS 1", "-", "17", "28", "26", "71", "PASSED"],
                     ["21", "Abdullahi", "Abdullahi Yusuf", "JSS 1", "-", "15", "18", "20", "53", "FAILED"],
                     ["22", "Yusuf", "Kabir", "JSS 1", "-", "21", "30", "32", "83", "PASSED"],
                     ["23", "Suleiman", "Ummulkulthum", "JSS 1", "-", "14", "19", "17", "50", "FAILED"],
-                    ["24", "Aisha", "Bunu Alibe", "JSS 1", "-", "17", "25", "22", "64", "PASSED"],
-                    ["25", "Maryam", "Abubakar", "JSS 1", "-", "14", "36", "30", "80", "PASSED"]
+                    ["24", "Bunu Alibe", "Aisha", "JSS 1", "-", "17", "25", "22", "64", "PASSED"],
+                    ["25", "Abubakar", "Maryam", "JSS 1", "-", "14", "36", "30", "80", "PASSED"]
 
 
                 ]
