--- a/index.html
+++ b/index.html
@@ -235,7 +235,10 @@
                     ["22", "Yusuf", "Kabir", "JSS 1", "-", "21", "30", "32", "83", "PASSED"],
                     ["23", "Suleiman", "Ummulkulthum", "JSS 1", "-", "14", "19", "17", "50", "FAILED"],
                     ["24", "Bunu Alibe", "Aisha", "JSS 1", "-", "17", "25", "22", "64", "PASSED"],
-                    ["25", "Abubakar", "Maryam", "JSS 1", "-", "14", "36", "30", "80", "PASSED"]
+                    ["25", "Abubakar", "Maryam", "JSS 1", "-", "14", "36", "30", "80", "PASSED"],
+                    [26, "Saeed", "Muhammad Alamin", "JSS 1", "", "21", "40", "50", "", ""],
+                    [27, "Umar", "Aisha A.", "JSS 1", "", "27", "47", "12", "", ""],
+                    [28, "Abdul", "Muhammad Al-amin", "JSS 1", "", "17", "18", "15", "", ""]
 
 
                 ]
