--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                     ["25", "Abubakar", "Maryam", "JSS 1", "-", "14", "36", "30", "80", "PASSED"],
                     [26, "Saeed", "Muhammad Alamin", "JSS 1", "", "21", "40", "50", "", ""],
                     [27, "Umar", "Aisha A.", "JSS 1", "", "27", "47", "12", "", ""],
-                    [28, "Abdul", "Muhammad Al-amin", "JSS 1", "", "17", "18", "15", "", ""]
-
+                    [28, "Abdul", "Muhammad Al-amin", "JSS 1", "", "17", "18", "15", "", ""],
+                    [29, "Jibril", "Abdulrahman Ahmad", "JSS 1", "", "21", "26", "31", "", ""]
 
                 ]
 
