--- a/index.html
+++ b/index.html
@@ -239,7 +239,13 @@
                     [26, "Saeed", "Muhammad Alamin", "JSS 1", "", "21", "40", "50", "", ""],
                     [27, "Umar", "Aisha A.", "JSS 1", "", "27", "47", "12", "", ""],
                     [28, "Abdul", "Muhammad Al-amin", "JSS 1", "", "17", "18", "15", "", ""],
-                    [29, "Jibril", "Abdulrahman Ahmad", "JSS 1", "", "21", "26", "31", "", ""]
+                    [29, "Jibril", "Abdulrahman Ahmad", "JSS 1", "", "21", "26", "31", "", ""],
+                    [30, "Muhammad", "Nana Firdausi", "JSS 1", "", "32", "39", "38", "", ""],
+                    [31, "Sani", "Fatima Isah", "JSS 1", "", "27", "37", "33", "", ""],
+                    [32, "Sani", "Muhammad isah", "JSS 1", "", "21", "26", "33", "", ""],
+                    [33, "Sani", "Muhammad Mansir", "JSS 1", "", "11", "26", "23", "", ""],
+                    [34, "Abubakar", "Hafsat Yakub", "JSS 1", "", "24", "26", "19", "", ""],
+                    [35, "Abubakar", "Fayyad Yakub", "JSS 1", "", "22", "30", "11", "", ""]
 
                 ]
 
