--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
                     [32, "Sani", "Muhammad isah", "JSS 1", "", "21", "26", "33", "", ""],
                     [33, "Sani", "Muhammad Mansir", "JSS 1", "", "11", "26", "23", "", ""],
                     [34, "Abubakar", "Hafsat Yakub", "JSS 1", "", "24", "26", "19", "", ""],
-                    [35, "Abubakar", "Fayyad Yakub", "JSS 1", "", "22", "30", "11", "", ""]
+                    [35, "Abubakar", "Fayyad Yakub", "JSS 1", "", "22", "30", "11", "", ""],
+                    [36, "Mu'azu", "Nasir A.", "JSS 1", "", "9", "15", "32", "", ""]
 
                 ]
 
