--- a/index.html
+++ b/index.html
@@ -246,7 +246,12 @@
                     [33, "Sani", "Muhammad Mansir", "JSS 1", "", "11", "26", "23", "", ""],
                     [34, "Abubakar", "Hafsat Yakub", "JSS 1", "", "24", "26", "19", "", ""],
                     [35, "Abubakar", "Fayyad Yakub", "JSS 2", "", "22", "30", "11", "", ""],
-                    [36, "Mu'azu", "Nasir A.", "JSS 1", "", "9", "15", "32", "", ""]
+                    [36, "Mu'azu", "Nasir A.", "JSS 1", "", "9", "15", "32", "", ""],
+                    [37, "Ibrahim", "Fadila Sani.", "JSS 3", "", "18", "30", "33", "", ""],
+                    [38, "Umar", "Sadik S.", "JSS 1", "", "13", "9", "10", "", ""],
+                    [39, "Abba", "Aisha Yahaya", "JSS 1", "", "15", "20", "27", "", ""],
+                    [40, "Umar", "Anisah Bamange", "JSS 1", "", "20", "29", "35", "", ""],
+                    [41, "Abdullahi", "Zainab", "JSS 3", "", "14", "27", "36", "", ""]
 
                 ]
 
