--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@
                     [38, "Umar", "Sadik S.", "JSS 1", "", "13", "9", "10", "", ""],
                     [39, "Abba", "Aisha Yahaya", "JSS 1", "", "15", "20", "27", "", ""],
                     [40, "Umar", "Anisah Bamange", "JSS 1", "", "20", "29", "35", "", ""],
-                    [41, "Abdullahi", "Zainab", "JSS 3", "", "14", "27", "36", "", ""]
+                    [41, "Abdullahi", "Zainab", "JSS 3", "", "14", "27", "36", "", ""],
+                    [42, "Mustapha", "Musa Basri", "JSS 1", "", "17", "11", "16", "", ""],
+                    [43, "Abdulhameed", "Farhan Zuberu", "JSS 1", "", "22", "29", "32", "", ""]
 
                 ]
 
