--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@
                     [40, "Umar", "Anisah Bamange", "JSS 1", "", "20", "29", "35", "", ""],
                     [41, "Abdullahi", "Zainab", "JSS 3", "", "14", "27", "36", "", ""],
                     [42, "Mustapha", "Musa Basri", "JSS 1", "", "17", "11", "16", "", ""],
-                    [43, "Abdulhameed", "Farhan Zuberu", "JSS 1", "", "22", "29", "32", "", ""]
+                    [43, "Abdulhameed", "Farhan Zuberu", "JSS 1", "", "22", "29", "32", "", ""],
+                    [44, "Aminu", "Rahman", "JSS 1", "", "15", "18", "24", "", ""],
+                    [45, "Usman", "Aisha Chill", "JSS 2", "", "14", "15", "27", "", ""]
 
                 ]
 
