--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
                     [42, "Mustapha", "Musa Basri", "JSS 1", "", "17", "11", "16", "", ""],
                     [43, "Abdulhameed", "Farhan Zuberu", "JSS 1", "", "22", "29", "32", "", ""],
                     [44, "Aminu", "Rahman", "JSS 1", "", "15", "18", "24", "", ""],
-                    [45, "Usman", "Aisha Chill", "JSS 2", "", "14", "15", "27", "", ""]
+                    [45, "Usman", "Aisha Chill", "JSS 2", "", "14", "15", "27", "", ""],
+                    [46, "Muhammad", "Aisha Auwal", "JSS 1", "", "23", "25", "35", "", ""]
 
                 ]
 
