--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
                     [44, "Aminu", "Rahman", "JSS 1", "", "15", "18", "24", "", ""],
                     [45, "Usman", "Aisha Chill", "JSS 2", "", "14", "15", "27", "", ""],
                     [46, "Muhammad", "Aisha Auwal", "JSS 1", "", "23", "25", "35", "", ""]
+                    [47, "Abdullahi", "Ramlat Sanusi", "JSS 1", "", "20", "36", "39", "", ""]
 
                 ]
 
