--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     [43, "Abdulhameed", "Farhan Zuberu", "JSS 1", "", "22", "29", "32", "", ""],
                     [44, "Aminu", "Rahman", "JSS 1", "", "15", "18", "24", "", ""],
                     [45, "Usman", "Aisha Chill", "JSS 2", "", "14", "15", "27", "", ""],
-                    [46, "Muhammad", "Aisha Auwal", "JSS 1", "", "23", "25", "35", "", ""]
+                    [46, "Muhammad", "Aisha Auwal", "JSS 1", "", "23", "25", "35", "", ""],
                     [47, "Abdullahi", "Ramlat Sanusi", "JSS 1", "", "20", "36", "39", "", ""]
 
                 ]
